--- a/htmlcss/demo/index.html
+++ b/htmlcss/demo/index.html
@@ -343,68 +343,68 @@
                 <div class="env">
                     <div class="pagemain-title">
                         <span class="pagemain-content-l green"></span>
-                        <span class="pagemain-content-title">720VR</span>
+                        <span class="pagemain-content-title font-15">720VR</span>
                     </div>
                     <div class="env-content clearfix">
                         <div class="env-contrntl">
                             <img src="img/cul1.png" alt="english">
-                            <span>720VR少儿英语课堂</span>
+                            <span class="font-14">720VR少儿英语课堂</span>
                         </div>
                         <div class="env-contrntr">
                             <img src="img/cul2.png" alt="english">
-                            <span>720VR少儿英语课堂</span>
+                            <span class="font-14">720VR少儿英语课堂</span>
                         </div>
                     </div>
                     <div class="env-content clearfix">
                         <div class="env-contrntl">
                             <img src="img/cul1.png" alt="english">
-                            <span>720VR少儿英语课堂</span>
+                            <span class="font-14">720VR少儿英语课堂</span>
                         </div>
                         <div class="env-contrntr">
                             <img src="img/cul2.png" alt="english">
-                            <span>720VR少儿英语课堂</span>
+                            <span class="font-14">720VR少儿英语课堂</span>
                         </div>
                     </div>
                 </div>
                 <div class="env">
                     <div class="pagemain-title">
                         <span class="pagemain-content-l red"></span>
-                        <span class="pagemain-content-title">视频</span>
+                        <span class="pagemain-content-title font-15">视频</span>
                     </div>
                     <div class="env-content clearfix">
                         <div class="env-contrntl">
                             <img src="img/cul1.png" alt="english">
-                            <span>少儿英语课堂</span>
+                            <span class="font-14">少儿英语课堂</span>
                         </div>
                         <div class="env-contrntr">
                             <img src="img/cul2.png" alt="english">
-                            <span>少儿英语课堂</span>
+                            <span class="font-14">少儿英语课堂</span>
                         </div>
                     </div>
                 </div>
                 <div class="env">
                     <div class="pagemain-title">
                         <span class="pagemain-content-l green"></span>
-                        <span class="pagemain-content-title">照片</span>
+                        <span class="pagemain-content-title font-15">照片</span>
                     </div>
                     <div class="env-content clearfix">
                         <div class="env-contrntl">
                             <img src="img/cul1.png" alt="english">
-                            <span>少儿英语课堂</span>
+                            <span class="font-14">少儿英语课堂</span>
                         </div>
                         <div class="env-contrntr">
                             <img src="img/cul2.png" alt="english">
-                            <span>少儿英语课堂</span>
+                            <span class="font-14">少儿英语课堂</span>
                         </div>
                     </div>
                     <div class="env-content clearfix">
                         <div class="env-contrntl">
                             <img src="img/cul1.png" alt="english">
-                            <span>少儿英语课堂</span>
+                            <span class="font-14">少儿英语课堂</span>
                         </div>
                         <div class="env-contrntr">
                             <img src="img/cul2.png" alt="english">
-                            <span>少儿英语课堂</span>
+                            <span class="font-14">少儿英语课堂</span>
                         </div>
                     </div>
                 </div>
