--- a/htmlcss/demo/index.html
+++ b/htmlcss/demo/index.html
@@ -86,7 +86,7 @@
                         <a href="http://www.haiziwang.com/">
                             <img src="img/img1.png" class="pagemain-content-img">
                         </a>
-                        <p class="pagemain-content-word active">
+                        <p class="pagemain-content-word active font-16">
                             环球雅思少儿游乐会<br>
                             <span class="pagemain-content-word-span">欢迎大家参加这样的活动，带孩子一起玩</span>
                         </p>
