--- a/smalltobig/index.html
+++ b/smalltobig/index.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>es6Learning</title>
+    <title>金额小写转大写</title>
 </head>
-
 <body>
-    <ul class="uls">
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-    </ul>
-<script src="index.js"></script>
+    <input type="text" placeholder="请输入。。。" id="textinput">
+    <button>确定</button>
+    <div></div>
+    <script src="./index.js"></script>
 </body>
-
 </html>
