--- a/htmlcss/demo/index.html
+++ b/htmlcss/demo/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="孩子王，环球雅思少儿英语静态页面">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <title>环球雅思少儿英语</title>
-    <link rel="shortcut icon" href="http://st.haiziwang.com/static/wx/1.0.0/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" type="image/x-icon">
     <link rel="stylesheet" href="css-reset.css">
     <link rel="stylesheet" href="index.css">
 </head>
@@ -205,7 +205,7 @@
                                 <hr>
                                 <li class="clearfix">
                                     <div class="evaluate-li-left">
-                                        <a href="http://www.haiziwang.com/">
+                                        <a href="http://www.baidu.com/">
                                         <img src="img/evaluateheadimg.png" alt="头像" class="evaluate-headimg">
                                     </a>
                                     </div>
@@ -221,7 +221,7 @@
                                 </li>
                             </ul>
                         </div>
-                        <a href="http://www.haiziwang.com/" class="all-evaluate">
+                        <a href="http://www.baidu.com/" class="all-evaluate">
                         全部评价>
                     </a>
                     </div>
@@ -231,7 +231,7 @@
                         <div class="course-page">
                             <div class="course-pagetop clearfix">
                                 <div class="course-pagetopl">
-                                    <a href="http://www.haiziwang.com/">
+                                    <a href="http://www.baidu.com/">
                                     <img src="img/course1.png" alt="course">
                                 </a>
                                 </div>
@@ -258,7 +258,7 @@
                         <div class="course-page">
                             <div class="course-pagetop clearfix">
                                 <div class="course-pagetopl">
-                                    <a href="http://www.haiziwang.com/">
+                                    <a href="http://www.baidu.com/">
                                     <img src="img/course2.png" alt="course">
                                 </a>
                                 </div>
