--- a/htmlcss/demo/index.html
+++ b/htmlcss/demo/index.html
@@ -69,7 +69,7 @@
                         </div>
                         <div class="pagemain-content-word pagemain-content-address">
                             <span class="pagemain-content-word-span">地址：</span> 南京市中山东路311-2号
-                            <a href="http://www.haiziwang.com/"></a>
+                            <a href="http://www.baidu.com/"></a>
                         </div>
                     </div>
                     <div class="pagemain-content">
@@ -91,12 +91,12 @@
                         <div class="pagemain-title">
                             <span class="pagemain-content-l green"></span>
                             <span class="pagemain-content-title">在线课程</span>
-                            <a href="http://www.haiziwang.com/" alt="point">
+                            <a href="http://www.baidu.com/" alt="point">
                             <span class="allcourse">全部课程></span>
                         </a>
                         </div>
                         <div class="course-img">
-                            <a href="http://www.haiziwang.com/">
+                            <a href="http://www.baidu.com/">
                             <img src="img/img2.png" alt="课程">
                         </a>
                             <div class="course-online">
