--- a/htmlcss/demo/index.html
+++ b/htmlcss/demo/index.html
@@ -78,7 +78,7 @@
                             <span class="pagemain-content-title">活动资讯</span>
                         </div>
                         <div class="pagemain-content-int">
-                            <a href="http://www.haiziwang.com/">
+                            <a href="http://www.baidu.com/">
                             <img src="img/img1.png" class="pagemain-content-img">
                         </a>
                             <p class="pagemain-content-word active font-16">
