--- a/htmlcss/demo/index.html
+++ b/htmlcss/demo/index.html
@@ -30,7 +30,7 @@
                 </ul>
                 <span class="ielts-top-img">
             </span>
-                <a href="http://www.haiziwang.com/" target="_blank">
+                <a href="http://www.baidu.com/" target="_blank">
                 <img src="img/top-vr.png" class="ielts-top-vr">
             </a>
             </div>
