--- a/htmlcss/demo/index.html
+++ b/htmlcss/demo/index.html
@@ -110,7 +110,7 @@
                             </div>
                         </div>
                         <!-- <div class="course-img">
-                            <a href="http://www.haiziwang.com/">
+                            
                             <img src="img/img2.png" alt="课程">
                         </a>
                             <div class="course-online">
@@ -130,12 +130,12 @@
                         <div class="pagemain-title">
                             <span class="pagemain-content-l blue"></span>
                             <span class="pagemain-content-title">线下课程</span>
-                            <a href="http://www.haiziwang.com/" alt="point">
+                            <a href="http://www.baidu.com/" alt="point">
                             <span class="allcourse">全部课程></span>
                         </a>
                         </div>
                         <div class="course-img">
-                            <a href="http://www.haiziwang.com/">
+                            <a href="http://www.baidu.com/">
                             <img src="img/img2.png" alt="课程">
                         </a>
                             <div class="course-offline">
@@ -148,7 +148,7 @@
                             </div>
                         </div>
                         <div class="course-img">
-                            <a href="http://www.haiziwang.com/">
+                            <a href="http://www.baidu.com/">
                                 <img src="img/img2.png" alt="课程">
                             </a>
                             <div class="course-offline">
@@ -171,7 +171,7 @@
                             <ul class="evaluate-li">
                                 <li class="clearfix">
                                     <div class="evaluate-li-left">
-                                        <a href="http://www.haiziwang.com/">
+                                        <a href="http://www.baidu.com/">
                                         <img src="img/evaluateheadimg.png" alt="头像" class="evaluate-headimg">
                                     </a>
                                     </div>
@@ -188,7 +188,7 @@
                                 <hr>
                                 <li class="clearfix">
                                     <div class="evaluate-li-left">
-                                        <a href="http://www.haiziwang.com/">
+                                        <a href="http://www.baidu.com/">
                                         <img src="img/evaluateheadimg.png" alt="头像" class="evaluate-headimg">
                                     </a>
                                     </div>
